[package]
name = "grocketmq-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
parking_lot = "0.12.3"
prost = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.12.1"